--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -22,7 +22,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
 
 -->
 <interface>
-  <requires lib="gtk+" version="3.16"/>
+  <requires lib="gtk+" version="3.20"/>
   <!-- interface-license-type gplv2 -->
   <!-- interface-name Kalibrator -->
   <!-- interface-description Kalibrator Software f\303\274r die CO/NO2 Kombisensoren mit Modbus Interface -->
@@ -1186,14 +1186,15 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                               <object class="GtkLabel" id="label_liveview_no2_value">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">00</property>
+                                <property name="hexpand">False</property>
+                                <property name="label" translatable="yes">0000</property>
                                 <attributes>
                                   <attribute name="size" value="60000"/>
                                 </attributes>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">True</property>
+                                <property name="fill">False</property>
                                 <property name="pack_type">end</property>
                                 <property name="position">1</property>
                               </packing>
@@ -1333,7 +1334,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                               <object class="GtkLabel" id="label_liveview_co_value">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">000</property>
+                                <property name="label" translatable="yes">0000</property>
                                 <attributes>
                                   <attribute name="size" value="60000"/>
                                 </attributes>
