--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -175,7 +175,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                       </object>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="fill">True</property>
+                        <property name="fill">False</property>
                         <property name="position">0</property>
                       </packing>
                     </child>
@@ -184,12 +184,12 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                         <property name="width_request">150</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="hexpand">False</property>
                         <property name="label" translatable="yes">nicht erkannt</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="fill">True</property>
+                        <property name="fill">False</property>
+                        <property name="pack_type">end</property>
                         <property name="position">1</property>
                       </packing>
                     </child>
